@@ -13,6 +13,7 @@
 	- `schema.csrf()` enables csrf for schemas and their routes
 	- `csrf` flag in `ROUTE()` method
 	- `RESTBuilder.csrf(token)`
+- `CONF.default_errorbuilder_errors` for handling of all HTTP errors via ErrorBuilder
 
 ========================
 0.0.36
